# django-robots

./: .coveragerc  .gitignore  .hgtags  .isort.cfg  .pre-commit-config.yaml  .python-version  .tmuxp.yaml  .tool-versions  .travis.yml  CHANGES.rst  HISTORY.rst  INSTALL.txt  LICENSE.txt  MANIFEST.in  Makefile  README.rst  README.txt  contributors.txt  pyproject.toml  requirements-test.txt  runtests.py  settings_test.py  setup.cfg  setup.py  tox.ini  urls_test.py
.github/workflows/: release.yml  test.yml
.tx/: config
1222687879_asd_120/: ASSIGNED_jannis@leidel.info  COMMENT_1222687879_jannis@leidel.info  TICKET_ID
docs/: Makefile  conf.py  index.rst  index.txt  make.bat  overview.rst  overview.txt
robots/: __init__.py  admin.py  forms.py  helpers.py  models.py  settings.py  tests.py  urls.py  views.py  widgets.py
robots/locale/da/LC_MESSAGES/: django.mo  django.po
robots/locale/de/LC_MESSAGES/: django.mo  django.po
robots/locale/el/LC_MESSAGES/: django.po
robots/locale/en/LC_MESSAGES/: django.mo  django.po
robots/locale/es_ES/LC_MESSAGES/: django.po
robots/locale/fr/LC_MESSAGES/: django.mo  django.po
robots/locale/it/LC_MESSAGES/: django.mo  django.po
robots/locale/ja/LC_MESSAGES/: django.mo
robots/locale/nl/LC_MESSAGES/: django.mo
robots/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
robots/locale/ru/LC_MESSAGES/: django.mo  django.po
robots/locale/sk/LC_MESSAGES/: django.po
robots/locale/uk/LC_MESSAGES/: django.po
robots/migrations/: 0001_initial.py  0002_add_free_text.py  0002_auto__chg_field_rule_crawl_delay.py  __init__.py
robots/south_migrations/: 0001_initial.py
robots/templates/robots/: reload_disallowed.js  rule_list.html  sites_selector.html
src/robots/: __init__.py  admin.py  apps.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py
src/robots/locale/da/LC_MESSAGES/: django.po
src/robots/locale/de/LC_MESSAGES/: django.mo  django.po
src/robots/locale/el/LC_MESSAGES/: django.mo  django.po
src/robots/locale/en/LC_MESSAGES/: django.po
src/robots/locale/es_ES/LC_MESSAGES/: django.mo  django.po
src/robots/locale/fr/LC_MESSAGES/: django.mo  django.po
src/robots/locale/it/LC_MESSAGES/: django.mo  django.po
src/robots/locale/ja/LC_MESSAGES/: django.po
src/robots/locale/nl/LC_MESSAGES/: django.po
src/robots/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
src/robots/locale/ru/LC_MESSAGES/: django.po
src/robots/locale/sk/LC_MESSAGES/: django.mo  django.po
src/robots/locale/uk/LC_MESSAGES/: django.mo  django.po
src/robots/migrations/: 0001_initial.py  0002_alter_id_fields.py  0003_alter_url_pattern.py  __init__.py
src/robots/south_migrations/: 0001_initial.py
test-templates/: test.html
tests/: base.py  requirements.txt  settings.py  test_views.py  urls.py
tests/test_utils/: urls.py
