[flake8]
exclude = *.egg-info,.git,.settings,.tox,build,dist,docs,requirements,tmp,*migrations*,*south_migrations*,tests,data
max-line-length = 99

[metadata]
license-file = LICENSE.txt

[wheel]
universal = 1

[isort]
line_length = 99
skip = migrations, south_migrations
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = robots
multi_line_output = 5
not_skip = __init__.py